# plagiarism-checker

./: CMakeLists.txt  README.md  c_cpp_properties.json  main.cpp  plagiarism_checker.cpp  plagiarism_checker.hpp  tokenizer.cpp  tokenizer.hpp
